[workspace]

# Here we declare that this is a workspace, containing several crates
# within it.
#
# Please keep this list topologically sorted by dependency relation, so
# that every crate appears _before_ any other crate that depends on it.
# This also applies to dev-dependencies.
# We depend on this for publishing to crates.io. e.g.
# see
# https://blog.iany.me/2020/10/gotchas-to-publish-rust-crates-in-a-workspace/#cyclic-dependencies
members = [
    "crates/arti",
    "crates/arti-bench",
    "crates/arti-client",
    "crates/arti-config",
    "crates/arti-relay",
    "crates/arti-rpc-client-core",
    "crates/arti-rpcserver",
    "crates/arti-testing",
    "crates/caret",
    "crates/equix",
    "crates/fs-mistrust",
    "crates/fslock-guard",
    "crates/hashx",
    "crates/oneshot-fused-workaround",
    "crates/retry-error",
    "crates/safelog",
    "crates/slotmap-careful",
    "crates/test-temp-dir",
    "crates/tor-async-utils",
    "crates/tor-basic-utils",
    "crates/tor-bytes",
    "crates/tor-cell",
    "crates/tor-cert",
    "crates/tor-chanmgr",
    "crates/tor-checkable",
    "crates/tor-circmgr",
    "crates/tor-congestion",
    "crates/tor-config",
    "crates/tor-config-path",
    "crates/tor-consdiff",
    "crates/tor-dirclient",
    "crates/tor-dirmgr",
    "crates/tor-error",
    "crates/tor-events",
    "crates/tor-general-addr",
    "crates/tor-geoip",
    "crates/tor-guardmgr",
    "crates/tor-hsclient",
    "crates/tor-hscrypto",
    "crates/tor-hsrproxy",
    "crates/tor-hsservice",
    "crates/tor-key-forge",
    "crates/tor-keymgr",
    "crates/tor-linkspec",
    "crates/tor-llcrypto",
    "crates/tor-log-ratelim",
    "crates/tor-memquota",
    "crates/tor-netdir",
    "crates/tor-netdoc",
    "crates/tor-persist",
    "crates/tor-proto",
    "crates/tor-protover",
    "crates/tor-ptmgr",
    "crates/tor-relay-crypto",
    "crates/tor-relay-selection",
    "crates/tor-rpc-connect",
    "crates/tor-rpcbase",
    "crates/tor-rtcompat",
    "crates/tor-rtmock",
    "crates/tor-socksproto",
    "crates/tor-units",

    "maint/fixup-features",
    "maint/keygen-openssh-test",

    "examples/axum/axum-hello-world",
    "examples/download-manager",
    "examples/gsoc2023/connection-checker",
    "examples/gsoc2023/dns-resolver",
    "examples/gsoc2023/obfs4-checker",
    "examples/gsoc2023/pt-proxy",
    "examples/hyper/hyper-http-client-example",
    "examples/hyper/hyper-http-hs-example",
]

resolver = "2"

[profile.release]
# By default we'd like to get good performance and a small download size.
# (Assuming xz compression on the binary.)
#
# The biggest win is to run `strip --strip-debug` on the binary after
# generating it, to throw out debugging symbols that we inherited from
# other libraries.  Don't do `strip --strip-unused`, though, or you'll
# break backtraces.  That saves about 21% download size.

# Using LTO saves a further 14% of download size, and improves performance,
# at the cost of compile time.
lto = true
# Setting codegen-units=1 saves a further 7% download size.  It also
# improves performance at the cost of compile time.
codegen-units = 1
# Optimize for size.  [Actually this is even smaller than 'z' on rust
# 1.56.  It saves about 11% download size over the default value of '3'.]
opt-level = 's'

[profile.release.package.slotmap-careful]
opt-level = 2

[profile.quicktest]
# This profile is meant to be a compromise between "release" (which
# takes a long time to build) and "dev" (which can be too slow to actually
# use when connecting over the Tor network).
inherits = "release"
lto = "thin"
codegen-units = 16
opt-level = 2
incremental = true

[profile.bench]
# For "cargo bench", which is only used by some crates.
# Inherits release build settings, but adds full debug symbols.
debug = 2
strip = "none"
