[package]
name = "arti-config"
version = "0.17.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Removed crate.  (Tools for configuration management in Arti)"
keywords = ["tor", "arti"]
categories = ["config"]
repository.workspace = true
publish = false
[package.metadata.docs.rs]
all-features = true

[dependencies]

[features]
full = []
