[package]
name = "caret"
version = "0.5.1"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Macros for declaring non-exhaustive C-style enumerations, with named members"
keywords = ["macro", "enum"]
categories = ["rust-patterns"]
repository.workspace = true

[dependencies]

[features]
full = []
[package.metadata.docs.rs]
all-features = true
