[package]
name = "fs-mistrust"
version = "0.9.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition.workspace = true
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Ensure that files can only be read or written by trusted users"
keywords = ["fs", "file", "permissions", "ownership", "privacy"]
categories = ["filesystem"]
repository.workspace = true
rust-version.workspace = true

[features]
default = ["walkdir", "anon_home"]
full = ["walkdir", "anon_home"]

anon_home = ["once_cell", "dirs"]

[dependencies]
derive_builder = { version = "0.11", package = "derive_builder_fork_arti" }
dirs = { version = "6", optional = true }
once_cell = { version = "1", optional = true }
serde = { version = "1.0.103", features = ["derive"], optional = true }
thiserror = "2"
walkdir = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
once_cell = "1"

[target.'cfg(all(unix, not(target_os="ios"), not(target_os="android")))'.dependencies]
pwd-grp = "1"

[dev-dependencies]
serde_json = "1.0.50"
tempfile = "3"
toml = "0.8.8"
[package.metadata.docs.rs]
all-features = true
