[package]
name = "oneshot-fused-workaround"
version = "0.2.1"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Fused wrapper for futures::channel::oneshot"
keywords = ["tor", "arti"]
# We must put *something* here and this will do
categories = ["rust-patterns"]
repository.workspace = true

[dependencies]
futures = "0.3.14"

[features]
full = []
