[package]
name = "slotmap-careful"
version = "0.2.3"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
description = "Wrap the slotmap crate and prevent key reuse"
keywords = ["slotmap", "arena"]
categories = ["data-structures"]
repository.workspace = true

[dependencies]
paste = "1"
serde = "1.0"
slotmap = { version = "1.0.7", features = ["serde"] }
thiserror = "2"
void = "1"

[dev-dependencies]
serde_json = "1.0.50"

[features]
full = []
