[package]
name = "tor-checkable"
version = "0.28.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Types to ensure that signed or time-bound data is validated before use"
keywords = ["tor", "arti", "typestate"]
categories = ["cryptography", "rust-patterns"]
repository.workspace = true

[features]
experimental = ["experimental-api"]
experimental-api = ["__is_experimental"]
full = ["tor-llcrypto/full"]
__is_experimental = []

[dependencies]
humantime = "2"
signature = "2"
thiserror = "2"
tor-llcrypto = { path = "../tor-llcrypto", version = "0.28.0" }
[package.metadata.docs.rs]
all-features = true
[dev-dependencies]
humantime = "2"
