[package]
name = "tor-consdiff"
version = "0.28.0"
authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Handle the consensus-diff format used in the Tor directory protocol"
keywords = ["tor", "arti", "diff"]
categories = ["parser-implementations", "network-programming"]
repository.workspace = true

[features]
default = []
full = ["tor-llcrypto/full"]

experimental = ["slow-diff-apply"]
slow-diff-apply = ["__is_experimental"]
__is_experimental = []

[dependencies]
digest = "0.10.0"
hex = "0.4"
thiserror = "2"
tor-llcrypto = { path = "../tor-llcrypto", version = "0.28.0" }
[package.metadata.docs.rs]
all-features = true
