[package]
name = "tor-events"
version = "0.17.0"
edition.workspace = true
rust-version.workspace = true
authors = ["The Tor Project, Inc.", "eta <eta@torproject.org>"]
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "A typed event broadcasting framework for Arti."
keywords = ["tor", "arti"]
categories = ["asynchronous"]
repository.workspace = true

# This crate is not (yet?) used anywhere in Arti.
publish = false

[dependencies]
async-broadcast = "0.7.0"
futures = "0.3.14"
once_cell = "1"
serde = { version = "1.0.103", features = ["derive"] }
thiserror = "2"
tracing = "0.1.36"

[dev-dependencies]
tokio = { version = "1.7", features = ["macros", "rt", "rt-multi-thread", "time"] }

[features]
full = []
[package.metadata.docs.rs]
all-features = true
