[package]
name = "tor-geoip"
version = "0.28.0"
authors = ["The Tor Project, Inc.", "eta <eta@torproject.org>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
description = "A crate to parse C Tor GeoIP CSV files."
keywords = ["tor", "arti"]
readme = "README.md"
categories = ["parser-implementations", "network-programming"]
repository.workspace = true

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
once_cell = "1.18"
rangemap = "1.3"
thiserror = "2"

[features]
embedded-db = []
default = ["embedded-db"]
full = ["embedded-db"]
