[package]
name = "tor-log-ratelim"
version = "0.28.0"
authors = ["The Tor Project, Inc."]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Facility for rate-limiting log messages in Arti"
keywords = ["tor", "arti", "async"]
categories = ["asynchronous"]
repository.workspace = true

[features]

default = []
full = ["tor-error/full", "tor-rtcompat/full"]

[dependencies]

futures = "0.3.14"
humantime = "2"
once_cell = "1.18"
thiserror = "2"
tor-error = { path = "../tor-error", version = "0.28.0" }
tor-rtcompat = { path = "../tor-rtcompat", version = "0.28.0" }
tracing = "0.1.36"
weak-table = "0.3.0"

[dev-dependencies]
