[package]
name = "tor-rtcompat-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tor-general-addr]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "general_addr"
path = "fuzz_targets/general_addr.rs"
test = false
doc = false
bench = false


[[bin]]
name = "roundtrip_addr"
path = "fuzz_targets/roundtrip_addr.rs"
test = false
doc = false
bench = false
